--- a/newBooking.html
+++ b/newBooking.html
@@ -14,7 +14,7 @@
             <h3>available show</h3>
             <form action="">
                 <label for="year">
-                    Year
+                    Date
                 </label>
                 <input id="year" type="month">
                 <input type="submit" title="search" >
